# pacng

./: .gitignore  CHANGES.md  Cargo.toml  LICENSE.md  PKGBUILD  README.md  ROADMAP.md  Vagrantfile
etc/: pacng.toml
scripts/: provision.sh  usr-lib-systemd-system-pacng-mirrorlist-update.service  usr-lib-systemd-system-pacng-mirrorlist-update.timer
src/: config.rs  database.rs  directories.rs  error.rs  lib.rs  mirrorlist.rs  sync.rs
