[package]
name = "pacng"
version = "0.1.0"
authors = [ "Joseph Quinn <quinn.josephr@protonmail.com>" ]
description = """
An alternative package manager for Arch Linux. Includes mirror updating and AUR support.
"""
license = "ISC"
homepage = "https://github.com/quinnjr/pacng"
repository = "https://github.com/quinnjr/pacng"
publish = false

[badges]
travis-ci = { repository = "quinnjr/pacng", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
clap = "2.29.0"
chrono = "0.4.0"
# chrono-humanize = "0.0.10"
command-macros = "0.1.10"
# crossbeam = "0.2.9"
reqwest = "0.8.5"
git2 = "0.6.10"
libc = "0.2.0"
regex = "0.2"
runas = "0.1.4"
serde = "1.0.26"
serde_derive = "1.0"
serde_json = "1.0.9"
slog = "2.1.1"
slog-async = "2.2.0"
slog-term = "2.3.0"
term = "*"
termcolor = "0.3.5"
toml = "0.4.5"
users = "0.6.0"
xdg-user-macros = "0.1.0"

[dev-dependencies]
galvanic-assert = "0.8.7"
galvanic-test = "0.1.3"

[build-dependencies]
curl-sys = "0.3.15"
libgit2-sys = "0.6.18"
libssh2-sys = "0.2.6"
openssl-sys = "0.9.23"
